# Replyzen-AI01

./: .gitignore  .replit  DATABASE_DOCUMENTATION.md  DATABASE_SCHEMA.sql  SUPABASE_MIGRATION.sql  backend_new_features_test.py  backend_test.py  package-lock.json  pyproject.toml  replit.md  test_result.md  thread_filter_unit_test.py  vercel.json
.emergent/: emergent.yml
backend/: .env  auth.py  database.py  models.py  plan_permissions.py  requirements.txt  server.py  test.db
backend/routes/: admin_routes.py  ai_settings_routes.py  analytics_routes.py  auth_routes.py  billing_routes.py  composer_routes.py  contact_routes.py  email_routes.py  followup_routes.py  inbox_routes.py  notification_routes.py  settings_routes.py  smart_reply.py
backend/services/: Classification service .py  activity_log_service.py  ai_settings_service.py  autosend_cron.py  db_init.py  email_intelligence_service.py  email_service.py  email_sync_worker.py  env_validator.py  file_processing_service.py  followup_detection_cron.py  gmail_service.py  inbox_service.py  mock_gmail.py  notification_service.py  openai_service.py  smart_reply_service.py  thread_filter_service.py  user_service.py
frontend/: .env  package-lock.json  package.json  vercel.json
frontend/public/: Robots .txt  index.html  sitemap.xml
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AppLayout.js  GooglePermissionModal.js  NotificationBell.js  SEOHead.js
frontend/src/lib/: admin.ts  api.js  (+2 more)
memory/: PRD.md  test_credentials.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
(+29 files in other folders)
