[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "asyncpg==0.29.0",
    "bcrypt==4.1.3",
    "cryptography>=46.0.6",
    "email-validator==2.2.0",
    "fastapi==0.110.1",
    "google-api-python-client==2.191.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.3.0",
    "google-auth-oauthlib==1.3.0",
    "httpx==0.28.1",
    "litellm==1.80.0",
    "openai==1.99.9",
    "passlib==1.7.4",
    "pydantic==2.12.5",
    "pyjwt==2.11.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "razorpay==2.0.0",
    "requests>=2.33.0",
    "sib-api-v3-sdk==7.6.0",
    "sqlalchemy==2.0.36",
    "stripe==14.4.0",
    "tenacity==9.1.4",
    "uvicorn==0.25.0",
]
